changed google appengine project name

--- a/src/main/resources/build.template.properties
+++ b/src/main/resources/build.template.properties
@@ -9,13 +9,13 @@
 # For dev server, any URL would do. 
 # For staging server, use the url of the app on remote server.
 # e.g. app.url=https\://teammates-john.appspot.com
-app.url=https\://teammates-john.appspot.com
+app.url=https\://teammates-hshahid.appspot.com
 
 # This is the Google Cloud Storage bucket name used by the app
 # For dev server, any name would do
 # For staging server, use the url of the app on remote server (without https\://)
 # e.g. app.gcs.bucketname = teammates-michelle.appspot.com
-app.gcs.bucketname=teammates-john.appspot.com
+app.gcs.bucketname=teammates-hshahid.appspot.com
 
 # This is the key used by test driver to access backdoor. 
 # It can be any random string you choose, 
