--- a/src/main/resources/build.template.properties
+++ b/src/main/resources/build.template.properties
@@ -9,7 +9,7 @@
 # For dev server, any URL would do. 
 # For staging server, use the url of the app on remote server.
 # e.g. app.url=https\://teammates-john.appspot.com
-app.url=https\://teammates-hshahid.appspot.com
+app.url=https\://teammates-john.appspot.com
 
 # This is the Google Cloud Storage bucket name used by the app
 # For dev server, any name would do
